--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,11 +9,11 @@
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
-			<link
-			rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🏂Hello</text></svg>">
-			<!-- Core theme CSS (includes Bootstrap)-->
-			<link href="css/styles.css" rel="stylesheet"/>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+			<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🏂Hello</text></svg>">
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+			<link rel="stylesheet" href="{{ asset('css/base/base.css') }}" referrerpolicy="no-referrer"/>
+
 		{% endblock %}
 
 	</head>
@@ -22,41 +22,28 @@
 			<!-- Navigation-->
 			{% include "composants/_nav.html.twig" %}
 		{% endblock %}
-
-		{# {% block header %}
-							<header class="bg-dark py-5">
-								<div class="container px-5">
-									<div class="row gx-5 align-items-center justify-content-center">
-										<div class="col-lg-8 col-xl-7 col-xxl-6">
-											<div class="my-5 text-center text-xl-start">
-												{% block titleHeader %}
-													<h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-												{% endblock %}
-												{% block subtitleHeader %}
-													<p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-												{% endblock %}
-												<div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-													<a class="btn btn-success btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-													<a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://picsum.photos/200/300" alt="..."/></div>
-									</div>
-								</div>
-							</header>
-						{% endblock %} #}
-		{% block body %}
-			{% block theader %}
-				{% block titleHeader %}aa
-				{% endblock %}
-
-				{% block subtitleHeader %}bb
-				{% endblock %}
-			{% endblock %}
-			{% block javascripts %}
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-			{% endblock %}
+		{% block header %}
+			<header class="bg-dark py-5">
+				<div class="container px-5">
+					<div class="row gx-5 align-items-center justify-content-center">
+						<div class="col-lg-8 col-xl-7 col-xxl-6">
+							<div class="my-5 text-center text-xl-start">
+								{% block titleHeader %}
+									<h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
+								{% endblock %}
+								{% block subtitleHeader %}
+									<p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+								{% endblock %}
+							</div>
+						</div>
+						<div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://picsum.photos/200/300" alt="..."/></div>
+					</div>
+				</div>
+			</header>
 		{% endblock %}
+		{% block body %}{% endblock %}
 	</body>
+	{% block javascripts %}
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	{% endblock %}
 </html>
