--- a/Code/templates/article/show.html.twig
+++ b/Code/templates/article/show.html.twig
@@ -183,10 +183,10 @@ var imagesContainer = document.querySelector('.container-images');
 button.addEventListener('click', function () {
 if (imagesContainer.style.display === 'none' || imagesContainer.style.display === '') {
 imagesContainer.style.display = 'flex';
-button.textContent = 'Cacher les Images';
+button.textContent = 'Cacher les Médias';
 } else {
 imagesContainer.style.display = 'none';
-button.textContent = 'Afficher les Images';
+button.textContent = 'Afficher les Médias';
 }
 });
 });
