Ajout de la Bdd.SQL + Validation Codacy B

--- a/Code/templates/base.html.twig
+++ b/Code/templates/base.html.twig
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Dévellopeur FullStack spécialisé React et Symfony"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Getssone"/>
 		<title>
 			{% block title %}Welcome 🌟✨
