--- a/Code/public/css/ShowEditArticle/showEditArticle.scss
+++ b/Code/public/css/ShowEditArticle/showEditArticle.scss
@@ -210,3 +210,11 @@ body {
     }
   }
 }
+button {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0.5rem !important;
+}
+.seeArrow {
+  display: none;
+}
