--- a/Code/templates/article/edit2.html.twig
+++ b/Code/templates/article/edit2.html.twig
@@ -110,7 +110,9 @@
 										{{ form_widget(form.images) }}</p>
 									<p class="fs-5 mb-4">{{ form_label(form.videos) }}
 										{{ form_widget(form.videos) }}</p>
-									<button type="button" class="btn btn-dark" id="add-link-button">Ajouter un lien</button>
+									<button type="button" class="btn btn-dark" id="add-link-button">
+										<i class="fas fa-link"></i>
+									</button>
 									<!-- Post header-->
 									<header
 
